--- a/css/adult.css
+++ b/css/adult.css
@@ -1,12 +1,19 @@
 body {
+    position: absolute;
     width: 100%;
-    height: 100%;
     background: red;
     font-weight: 400;
     font-size: 2rem;
+    height: 100%;
 }
 
 #indicator > img {
     width: 20%;
     float: right;
+}
+
+#permission {
+    width: 90%;
+    background-color: #fff;
+    margin: 0 auto;
 }
