--- a/css/adult.css
+++ b/css/adult.css
@@ -10,6 +10,7 @@ body {
 #indicator > img {
     width: 20%;
     float: right;
+    /*position: absolute;*/
 }
 
 #permission {
@@ -109,4 +110,17 @@ body {
 .link {
   padding: 5px 10px;
   cursor: pointer
+}
+#footer {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    bottom: 0px;
+    background-color: #ffffff;
+    box-shadow: 0 0 5px #000;
+    padding: 5px 10px;
+}
+
+#footer > h4 {
+    text-align: center;
 }
