--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     position: absolute;
     width: 100%;
-    background: #03011f;
+    background: #03011f !important;
     font-weight: 400;
     font-size: 2rem;
     height: 100%;
