--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@ body {
     width: 100%;
     background: #fff !important;
     font-weight: 400;
-    font-size: 2rem;
+    /*font-size: 2rem;*/
     height: 100%;
 }
 
 #indicator {
-    width: 20%;
+    width: 40%;
     right: 0;
     top: 350px;
     position: absolute;
@@ -34,7 +34,7 @@ body {
 }
 
 .modal-body > p {
-    font-size: 16px;
+    font-size: 160% !important;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
 }
